--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "format:check": "prettier --check .",
     "format": "prettier --check --write .",
-    "cli": "ts-node src/cli/index.ts"
+    "cli": "ts-node-transpile-only src/cli/index.ts"
   },
   "repository": {
     "type": "git",
